--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -63,4 +63,5 @@ RUN wget https://zenodo.org/records/10675405/files/model.zip && \
 
 WORKDIR /home/test/spired
 
-RUN python run_SPIRED.py --fasta_file example_spired/test.fasta --saved_folder example_spired
+RUN cconda activate spired_fitness \
+    && python run_SPIRED.py --fasta_file example_spired/test.fasta --saved_folder example_spired
